--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <button id="buy-facility">Buy for <span id="facility-price">10</span></button>
     <p>Level: <span id="facility-level">0</span></p>
 
+    <!--Cookie Workers-->
+    <hr>
+    <p>Cookie Workers </p>
+    <p>Producing <span id="worker-multiple">0</span> cookies per second!</p>
+    <button id="hire-workers">Hire for <span id="worker-wages">15</span></button>
+    <p>Level: <span id="worker-level">0</span></p>
+
     <script src="./scripts.js"></script>
    
 </body>
