--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Make Cookies</title>
+    <link rel="stylesheet" type="text/css" href="./mystyles.css" />
 </head>
 
 <body>
