--- a/index.html
+++ b/index.html
@@ -8,36 +8,50 @@
 </head>
 
 <body>
-    <h1 id="cookie-counter">0</h1>
-    <button id="cookie-clicker">Make Cookies</button>
-    <hr>
-    <h2>Shop</h2>
-    <hr>
-    <p>Click Power</p>
-    <p>Produces <span id="click-power-multiple">1</span> cookie(s) per click</p>
-    <button id="buy-click-power">Buy for <span id="click-power-price">10</span></button>
-    <p>level: <span id="click-power-level">1</span></p>
+    <div class="container">
 
-    <!---GRANDMAS-->
-    <hr>
-    <p>Grandmas</p>
-    <p>Producing <span id="grandma-multiple">0</span> cookies per second!</p>
-    <button id="buy-grandma">Buy for <span id="grandma-price">5</span></button>
-    <p>Level: <span id="grandma-level">0</span></p>
+        <div class="cookie">
+            <h1 id="cookie-counter">0</h1>
+            <button id="cookie-clicker">Make Cookies</button>
+            <hr>
+        </div>
 
-    <!--Cookie Manufacturing Facility-->
-    <hr>
-    <p>Cookie Manufacturing Facility</p>
-    <p>Producing <span id="facility-multiple">0</span> cookies per second!</p>
-    <button id="buy-facility">Buy for <span id="facility-price">10</span></button>
-    <p>Level: <span id="facility-level">0</span></p>
+        <div class="shop">
+            <h2>Shop</h2>
+            <hr>
+        </div>
 
-    <!--Cookie Workers-->
-    <hr>
-    <p>Cookie Workers </p>
-    <p>Producing <span id="worker-multiple">0</span> cookies per second!</p>
-    <button id="hire-workers">Hire for <span id="worker-wages">15</span></button>
-    <p>Level: <span id="worker-level">0</span></p>
+        <div class="click">
+            <h3>Click Power</h3>
+            <p>Produces <span id="click-power-multiple">1</span> cookie(s) per click</p>
+            <button id="buy-click-power">Buy for <span id="click-power-price">10</span></button>
+            <p>level: <span id="click-power-level">1</span></p>
+            <hr>
+        </div>
+    
+        <div class="grandma">
+            <h3>Grandmas</h3>
+            <p>Producing <span id="grandma-multiple">0</span> cookies per second!</p>
+            <button id="buy-grandma">Buy for <span id="grandma-price">5</span></button>
+            <p>Level: <span id="grandma-level">0</span></p>
+            <hr>
+        </div>
+        
+        <div class="facilility">
+            <h3>Cookie Manufacturing Facility</h3>
+            <p>Producing <span id="facility-multiple">0</span> cookies per second!</p>
+            <button id="buy-facility">Buy for <span id="facility-price">10</span></button>
+            <p>Level: <span id="facility-level">0</span></p>
+            <hr>
+        </div>
+   
+        <div class="workers">
+            <h3>Cookie Workers </h3>
+            <p>Producing <span id="worker-multiple">0</span> cookies per second!</p>
+            <button id="hire-workers">Hire for <span id="worker-wages">15</span></button>
+            <p>Level: <span id="worker-level">0</span></p>
+        </div>
+    </div>
 
     <script src="./scripts.js"></script>
    
