--- a/index.html
+++ b/index.html
@@ -10,42 +10,37 @@
 <body>
     <div class="container">
 
-        <div class="cookie">
+        <div class=" flex cookie">
             <h1 id="cookie-counter">0</h1>
             <button id="cookie-clicker">Make Cookies</button>
-            <hr>
         </div>
 
-        <div class="shop">
+        <div class=" flex shop">
             <h2>Shop</h2>
-            <hr>
         </div>
 
-        <div class="click">
+        <div class=" flex click">
             <h3>Click Power</h3>
             <p>Produces <span id="click-power-multiple">1</span> cookie(s) per click</p>
             <button id="buy-click-power">Buy for <span id="click-power-price">10</span></button>
             <p>level: <span id="click-power-level">1</span></p>
-            <hr>
         </div>
     
-        <div class="grandma">
+        <div class="flex grandma">
             <h3>Grandmas</h3>
             <p>Producing <span id="grandma-multiple">0</span> cookies per second!</p>
             <button id="buy-grandma">Buy for <span id="grandma-price">5</span></button>
             <p>Level: <span id="grandma-level">0</span></p>
-            <hr>
         </div>
         
-        <div class="facilility">
+        <div class="flex facility">
             <h3>Cookie Manufacturing Facility</h3>
             <p>Producing <span id="facility-multiple">0</span> cookies per second!</p>
             <button id="buy-facility">Buy for <span id="facility-price">10</span></button>
             <p>Level: <span id="facility-level">0</span></p>
-            <hr>
         </div>
    
-        <div class="workers">
+        <div class="flex workers">
             <h3>Cookie Workers </h3>
             <p>Producing <span id="worker-multiple">0</span> cookies per second!</p>
             <button id="hire-workers">Hire for <span id="worker-wages">15</span></button>
